--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,7 @@ $speed: 0.3s;
 // =======
 
 %themeArea {
-  @include background(inline-image("../img/texture.png"), radial-gradient(lighten($themeColor, 10%), darken($themeColor, 25%) 150%));
+  @include background(url(../img/texture.png), radial-gradient(lighten($themeColor, 10%), darken($themeColor, 25%) 150%));
   @include text-shadow(0 0.13em 0 rgba(0, 0, 0, 0.3));
   @include box-shadow(inset 0 -25px 25px -25px rgba(0, 0, 0, 0.25), inset 0 25px 25px -25px rgba(0, 0, 0, 0.25));
   &, h3 {
@@ -350,9 +350,9 @@ h1 {
 .welcome {
   display: none;
   text-align: center;
-  color: #ccc;
+  color: #ddd;
   h2 {
-    color: rgba(0, 0, 0, 0.13);
+    color: rgba(0, 0, 0, 0.10);
     @include text-shadow(0px 2px 2px #fff, 0 0 0 rgba(0, 0, 0, 0.08), 0px 2px 2px #fff);
     text-indent: -0.1em;
   }
