--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,7 @@ $speed: 0.3s;
 // =======
 
 %themeArea {
-  background: themeColor; // ie fallback
+  background: $themeColor; // ie fallback
   @include background(url(../img/texture.png), radial-gradient(lighten($themeColor, 10%), darken($themeColor, 25%) 150%));
   @include text-shadow(0 0.13em 0 rgba(0, 0, 0, 0.3));
   @include box-shadow(inset 0 -25px 25px -25px rgba(0, 0, 0, 0.25), inset 0 25px 25px -25px rgba(0, 0, 0, 0.25));
